Subiendo los primeros cambios

--- a/.gitignore
+++ b/.gitignore
@@ -239,4 +239,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/osx,windows,node,polymer,sublimetext
+# End of https://www.toptal.com/developers/gitignore/api/osx,windows,node,polymer,sublimetext# micalculadora
